syntax = "proto3";
package pb; // default package for Protocol Buffer
option go_package = "internal/pb";

message blank{}

// 3 mensagens, 1 da categoria, 1 da criação e 1 da resposta. 
message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryList {
    repeated Category categories = 1;
}

message CategoryGetRequest {
    string id = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList) {}
    rpc CreateCategoryBidirecional(stream CreateCategoryRequest) returns (stream Category) {}
    rpc ListCategories(blank) returns (CategoryList) {}
    rpc GetCategory(CategoryGetRequest) returns (Category) {}
}
